add system to keep user input in array

--- a/index.html
+++ b/index.html
@@ -817,11 +817,11 @@
             </div>
         </div>
         <div id='console'>
-          {/* <p>CONSOLE : </p> */}
+           <p>CONSOLE : </p>
           <div id="output" >
             <p id='c'>OUTPUT</p>
           </div>
-          <button id='runner' onClick={Machine()} >RUN</button>
+          <button id='runner' onClick="run()" >RUN</button>
         </div>
       </div>
     <script src="script.js"></script>
