--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image" href="./assets/48fb89ba-914b-4572-a909-fafdcb7bc4d9.jpg" />
     <link rel="stylesheet" href="styles.css">
     <meta="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kumron-Simulator</title>
+    <title>Master-Kumron-Simulator</title>
   </head>
   <body>
     <div class='Hdiv'>
@@ -23,6 +23,10 @@
          <p>7xx JUMPN xx</p>
          <p>8xx INPUT xx</p>
          <p>9xx OUTPUT xx</p>
+         <p></p>
+         <p>DEVELOPMENT:</p>
+         <p>AekkarinDEV</p>
+         <p>#CS-KKU-39</p>
         </div>
         <div id='editor'>
             <div class="Memline" id="m1">
