--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
          <p>#CS-KKU-39</p>
         </div>
         <div id='editor'>
+          <div id = "address"></div>
+          <div id="input">
+            <textarea name="codeeditor" id="inputcode" rows="99" cols="40">
+            </textarea>
+          </div>
         </div>
         <div id='console'>
             <p id="ct">CONSOLE : </p>
@@ -40,6 +45,6 @@
           <button id='runner' onClick="run()" >RUN</button>
         </div>
       </div>
-    <script src="script.js"></script>
+    <script src="machine.js"></script>
   </body>
 </html>
