--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
           <button id='runner' onClick="run()" >RUN</button>
         </div>
       </div>
-    <script src="machine.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
