--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="./assets/48fb89ba-914b-4572-a909-fafdcb7bc4d9.jpg" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="stlyes.css">
     <meta="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Master-Kumron-Simulator</title>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="">
       <div class="row">
         <div class="col">
-          <h1 class="h3">Toddler Machine Simulator</h1>
+          <h1 class="h2 d-flex justify-content-center">Toddler Machine Simulator</h1>
         </div>
       </div>
      
       <div class="row">
-        <div class="col bg-dark text-light col-2">
+        <div class="col bg-dark text-light col-2 d-flex justify-content-center">
+          <div>
          <p>LOAD xx</p>
          <p>STORE xx</p>
          <p>ADD xx</p>
@@ -41,12 +42,13 @@
          <p>AekkarinDEV</p>
          <p>#CS-KKU-39</p>
         </div>
+        </div>
 
-        <div class="col col-7">
-          <div class="editor d-flex flex-row">
+        <div class="col col-7 d-flex justify-content-center heigth-100%">
+          <div class="editor d-flex flex-row border border-3 p-2">
             <div id = "address"></div>
             <div id="input">
-              <textarea name="codeeditor" id="inputcode" rows="99" cols="40"></textarea>
+              <textarea class="border-0  mx-1 " name="codeeditor" id="inputcode" rows="99" cols="60%"></textarea>
             </div>
           </div>
         </div>
@@ -59,6 +61,5 @@
      </div>
   </div>
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
