--- a/src/index.html
+++ b/src/index.html
@@ -3,49 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="./assets/48fb89ba-914b-4572-a909-fafdcb7bc4d9.jpg" />
-    <link rel="stylesheet" href="stlyes.css">
     <meta="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Master-Kumron-Simulator</title>
   </head>
   <body>
     <div class="">
-      <div class="row">
-        <div class="col">
-          <h1 class="h2 d-flex justify-content-center">Toddler Machine Simulator</h1>
-        </div>
+      <div class="d-flex justify-content-center bg-cyan-100">
+          <h1 class="">Toddler Machine Simulator</h1>
       </div>
      
       <div class="row">
-        <div class="col bg-dark text-light col-2 d-flex justify-content-center">
+        <div class="">
           <div>
-         <p>LOAD xx</p>
-         <p>STORE xx</p>
-         <p>ADD xx</p>
-         <p>SUB xx</p>
-         <p>HALT</p>
-         <p>JUMP xx</p>
-         <p>JUMPZ xx</p>
-         <p>JUMPN xx</p>
-         <p>INPUT xx</p>
-         <p>OUTPUT xx</p>
-         <p>LOADX xx</p>
-         <p>STOREX xx</p>
-         <p>LOAD xx(XR)</p>
-         <p>STORE xx(XR)</p>
-         <p>RETURN</p>
-         <p>CALL xx</p>
-         <p>PUSH xx</p>
-         <p>POP xx</p>
-         <p>INCHAR xx</p>
-         <p>OUTCHAR xx</p>
          <p>DEVELOPMENT:</p>
          <p>AekkarinDEV</p>
          <p>#CS-KKU-39</p>
         </div>
         </div>
 
-        <div class="col col-7 d-flex justify-content-center heigth-100%">
-          <div class="editor d-flex flex-row border border-3 p-2">
+        <div class="">
+          <div class="">
             <div id = "address"></div>
             <div id="input">
               <textarea class="border-0  mx-1 " name="codeeditor" id="inputcode" rows="99" cols="60%"></textarea>
@@ -53,7 +31,7 @@
           </div>
         </div>
 
-        <div class="col col-3">
+        <div class="">
           <p id="ct">CONSOLE : </p>
           <div id="output" ></div>
           <button id='runner' onClick="run()" >RUN</button>
@@ -61,5 +39,6 @@
      </div>
   </div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
